--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 </head>
 <body>
 <!-------------------NAVIGATION-------------------->
+<div class="container-fluid">
+    <div class="logo"> <a href="index.html"> <img src="k1.png" style = "height:50; width: 50px;"> </a> 
+    </div>
     <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn"> 
-            <i class="fa fa-bars"> </i>
-        </label>
-        <label class="logo"> KatanaOne </label> 
-        <ul>
-            <li> <a class="active" href="index.html"> HOME </a> </li>
-            <li> <a href="crochet.html"> CROCHET </a> </li>
-            <li> <a href="partyneeds.html"> PARTY NEEDS </a> </li>
-            <li> <a href="custom.html"> CUSTOM </a> </li>
-        </ul>
-    </nav>
+
+<ul>
+    <li> <a href="index.html"> HOME </a> </li>
+    <li> <a href="crochet.html"> CROCHET </a> </li>
+    <li> <a href="partyneeds.html"> PARTY NEEDS </a> </li>
+    <li> <a href="custom.html"> CUSTOM </a> </li>
+</ul>
+</nav>
+</div>
 
 
     <h1> <marquee behavior="scroll" direction="right"> <pre class="fs-2 fw-bold">❄️ GREAT HOLIDAY GIFT ❄️               ❄️ GREAT HOLIDAY GIFT ❄️            ❄️ GREAT HOLIDAY GIFT ❄️</pre> </marquee> </h1>
     <div class="container1">
-        <a href="#"><img src="c.jpg" class="img-crochet"> </img> </a>
+        <a href="gallery.html"><img src="c.jpg" class="img-crochet"> </img> </a>
         </div>
         
         
