modified:   1.html 	modified:   2.html 	modified:   3.html 	modified:   4.html 	modified:   5.html 	modified:   6.html 	modified:   7.html 	modified:   8.html 	modified:   about.html 	modified:   buy.html 	modified:   c1.html 	modified:   c2.html 	modified:   c3.html 	modified:   c4.html 	modified:   cro1.html 	modified:   cro2.html 	modified:   cro3.html 	modified:   cro4.html 	modified:   crochet.html 	modified:   cu1.html 	modified:   cu2.html 	modified:   cu3.html 	modified:   cu4.html 	modified:   cu5.html 	modified:   cu6.html 	modified:   cu7.html 	modified:   cu8.html 	modified:   custom.html 	modified:   index.html 	modified:   p1.html 	modified:   p10.html 	modified:   p11.html 	modified:   p12.html 	modified:   p13.html 	modified:   p14.html 	modified:   p15.html 	modified:   p16.html 	modified:   p17.html 	modified:   p18.html 	modified:   p19.html 	modified:   p2.html 	modified:   p20.html 	modified:   p21.html 	modified:   p22.html 	modified:   p23.html 	modified:   p24.html 	modified:   p25.html 	modified:   p26.html 	modified:   p27.html 	modified:   p3.html 	modified:   p4.html 	modified:   p5.html 	modified:   p6.html 	modified:   p7.html 	modified:   p8.html 	modified:   p9.html 	modified:   partyneeds.html 	modified:   style.css

--- a/cu1.html
+++ b/cu1.html
@@ -84,7 +84,7 @@
 
     P100. 00
     <br>
-    <button type="submit" class="buy"> BUY </button>
+    <a href="buy.html"> <button type="submit" class="buy"> BUY </button> </a>
   </pre>
 
 
