--- a/cu5.html
+++ b/cu5.html
@@ -46,19 +46,19 @@
 </head>
 <body>
     <!-------------------NAVIGATION-------------------->
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn"> 
-            <i class="fa fa-bars"> </i>
-        </label>
-        <label class="logo"> KatanaOne </label>
-        <ul>
-            <li> <a class="active" href="index.html"> HOME </a> </li>
-            <li> <a href="crochet.html"> CROCHET </a> </li>
-            <li> <a href="partyneeds.html"> PARTY NEEDS </a> </li>
-            <li> <a href="custom.html"> CUSTOM </a> </li>
-        </ul>
+    <div class="container-fluid">
+        <div class="logo"> <a href="index.html"> <img src="k1.png" style = "height:50; width: 50px;"> </a> 
+        </div>
+        <nav>
+    
+    <ul>
+        <li> <a href="index.html"> HOME </a> </li>
+        <li> <a href="crochet.html"> CROCHET </a> </li>
+        <li> <a href="partyneeds.html"> PARTY NEEDS </a> </li>
+        <li> <a href="custom.html"> CUSTOM </a> </li>
+    </ul>
     </nav>
+    </div>
 
 
 
@@ -84,7 +84,7 @@
 
     P190. 00
     <br>
-    <button type="submit" class="buy"> BUY </button>
+    <a href="buy.html"> <button type="submit" class="buy"> BUY </button> </a>
   </pre>
 
 
