--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/ecc43e2a08.js" crossorigin="anonymous"></script>
        
-    <title>Document</title>
+    <title>MP1</title>
 </head>
 <body>
 <!-------------------NAVIGATION-------------------->
@@ -92,14 +92,14 @@
         <a href="gallery.html" style="color: black;"> <h4>  GALLERY </h4> </a>
 <!-------------------GALLERY-------------------->
    <div class="gallery">
-        <a href="1.jpg"> <img src="1.jpg"> </a>
-        <a href="2.jpg"> <img src="2.jpg"> </a>
-        <a href="3.jpg"> <img src="3.jpg"> </a>
-        <a href="4.jpg"> <img src="4.jpg"> </a>
-        <a href="5.jpg"> <img src="5.jpg"> </a>
-        <a href="6.jpeg"> <img src="6.jpeg"> </a>
-        <a href="7.jpg"> <img src="7.jpg"> </a>
-        <a href="8.jpg"> <img src="8.jpg"> </a>
+        <a href="1.html"> <img src="1.jpg"> </a>
+        <a href="2.html"> <img src="2.jpg"> </a>
+        <a href="3.html"> <img src="3.jpg"> </a>
+        <a href="4.html"> <img src="4.jpg"> </a>
+        <a href="5.html"> <img src="5.jpg"> </a>
+        <a href="6.html"> <img src="6.jpeg"> </a>
+        <a href="7.html"> <img src="7.jpg"> </a>
+        <a href="8.html"> <img src="8.jpg"> </a>
    </div>
 
 <!-------------------FOOTER--------------------> 
