--- a/cu3.html
+++ b/cu3.html
@@ -84,7 +84,7 @@
 
     P180. 00
     <br>
-    <button type="submit" class="buy"> BUY </button>
+    <a href="buy.html"> <button type="submit" class="buy"> BUY </button> </a>
   </pre>
 
 
