modified:   buy.html 	modified:   index.html

--- a/buy.html
+++ b/buy.html
@@ -81,8 +81,9 @@
             <input type="text" name="address" placeholder="Enter Full Address">
             <p> GCash Number: </p>
             <input type="text" name="gcash" placeholder="Enter GCash Number">
-            <button type="submit" class="btn btn-primary"> Submit </button>
-
+                <div class="container-submit">
+                    <button class="btn-submit" style="margin-left: 40%;"> Submit </button>
+                </div>
         </form>
    </div>
 
