--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <h3> ADDRESS</h3>
             <p> 49 Quezon Avenue Barangay 3 <br> Catanauan, Quezon, PH </p>
             <div class="social-icons">
-                <i class="fa-brands fa-facebook"> </i>
+                <i class="fa-brands fa-facebook"> </i> </a>
                 <i class="fa-brands fa-youtube"> </i>
                 <i class="fa-brands fa-discord"> </i>
                 <i class="fa-brands fa-instagram"> </i>
