modified:   1.html 	modified:   2.html 	modified:   3.html 	modified:   4.html 	modified:   5.html 	modified:   6.html 	modified:   7.html 	modified:   8.html 	modified:   c1.html 	modified:   c2.html 	modified:   c3.html 	modified:   c4.html 	modified:   cro1.html 	modified:   cro2.html 	modified:   cro3.html 	modified:   cro4.html 	modified:   cu1.html 	modified:   cu2.html 	modified:   cu3.html 	modified:   cu4.html 	modified:   cu5.html 	modified:   cu6.html 	modified:   cu7.html 	modified:   cu8.html 	modified:   index.html 	modified:   p1.html 	modified:   p10.html 	modified:   p11.html 	modified:   p12.html 	modified:   p13.html 	modified:   p14.html 	modified:   p15.html 	modified:   p16.html 	modified:   p17.html 	modified:   p18.html 	modified:   p19.html 	modified:   p2.html 	modified:   p20.html 	modified:   p21.html 	modified:   p22.html 	modified:   p23.html 	modified:   p24.html 	modified:   p25.html 	modified:   p26.html 	modified:   p27.html 	modified:   p3.html 	modified:   p4.html 	modified:   p5.html 	modified:   p6.html 	modified:   p7.html 	modified:   p8.html 	modified:   p9.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
 <!-------------------NAVIGATION-------------------->
-<div class="container-fluid">
-    <div class="logo"> <a href="index.html"> <img src="k1.png" style = "height:50; width: 50px;"> </a> 
+<div class="container">
+    <div class="logo"> <a href="index.html"> <img class="img-fluid" src="k1.png" style = "height:50; width: 50px;"> </a> 
     </div>
-    <nav>
-
-<ul>
+    </div>
+<nav>
+    <ul>
     <li> <a href="index.html"> HOME </a> </li>
     <li> <a href="crochet.html"> CROCHET </a> </li>
     <li> <a href="partyneeds.html"> PARTY NEEDS </a> </li>
     <li> <a href="custom.html"> CUSTOM </a> </li>
-</ul>
+    </ul>
 </nav>
-</div>
+
 
 
     <h1> <marquee behavior="scroll" direction="right"> <pre class="fs-2 fw-bold">❄️ GREAT HOLIDAY GIFT ❄️               ❄️ GREAT HOLIDAY GIFT ❄️            ❄️ GREAT HOLIDAY GIFT ❄️</pre> </marquee> </h1>
