--- a/contact.html
+++ b/contact.html
@@ -29,26 +29,26 @@
 </head>
 <body>
 <!-------------------NAVIGATION-------------------->
-    <nav>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn"> 
-            <i class="fa fa-bars"> </i>
-        </label>
-        <label class="logo"> KatanaOne </label>
-        <ul>
-            <li> <a class="active" href="index.html"> HOME </a> </li>
-            <li> <a href="crochet.html"> CROCHET </a> </li>
-            <li> <a href="partyneeds.html"> PARTY NEEDS </a> </li>
-            <li> <a href="custom.html"> CUSTOM </a> </li>
-        </ul>
-    </nav>
+    <div class="container">
+    <div class="logo"> <a href="index.html"> <img class="img-fluid" src="k1.png" style = "height:50; width: 50px;"> </a> 
+    </div>
+    </div>
+<nav>
+    <ul>
+    <li> <a href="index.html"> HOME </a> </li>
+    <li> <a href="crochet.html"> CROCHET </a> </li>
+    <li> <a href="partyneeds.html"> PARTY NEEDS </a> </li>
+    <li> <a href="custom.html"> CUSTOM </a> </li>
+    </ul>
+</nav>
 <!-------------------contact-------------------->
 
     <div class="about">
         <img src="k1.png" class="k1">
         <br>
         <pre>            Please send us a message to one of our pages on Facebook, 
-            Youtube, Discord and Instagram.</pre>
+            Youtube, Discord and Instagram. We have a 24 hour chat 
+            support. Thank you.</pre>
 
    </div>
 
