--- a/2.html
+++ b/2.html
@@ -63,7 +63,7 @@
 
 
 
-    <a href="2.html"> <img src="2.jpg" class="float-img"> </a>
+    <a href="2.jpg"> <img src="2.jpg" class="float-img"> </a>
   <pre style="margin-top: 50px; font-size:x-large; font-family: Arial, Helvetica, sans-serif; text-align: justify; ">
     <b>Scarf</b>
  <pre style="color: gray;">  8 inches x 40 inches
@@ -97,9 +97,9 @@
 <div class="footer">
     <div class="col-1">
         <h3> USEFUL LINKS </h3> 
-        <a href="#"> About </a>
-        <a href="#"> Contact </a>
-        <a href="#"> Shop </a>
+        <a href="about.html"> About </a>
+            <a href="contact.html"> Contact </a>
+            <a href="gallery.html"> Shop </a>
     </div>
     <div class="col-2"> 
         <h3> NEWS LETTER </h3>
