--- a/4.html
+++ b/4.html
@@ -64,7 +64,7 @@
 
 
 
-    <a href="4.html"> <img src="4.jpg" class="float-img"> </a>
+    <a href="4.jpg"> <img src="4.jpg" class="float-img"> </a>
   <pre style="margin-top: 50px; font-size:x-large; font-family: Arial, Helvetica, sans-serif; text-align: justify; ">
    <b>Table Matt</b>
  <pre style="color: gray;">  7 inches x 7 inches 
@@ -98,9 +98,9 @@
 <div class="footer">
     <div class="col-1">
         <h3> USEFUL LINKS </h3> 
-        <a href="#"> About </a>
-        <a href="#"> Contact </a>
-        <a href="#"> Shop </a>
+        <a href="about.html"> About </a>
+            <a href="contact.html"> Contact </a>
+            <a href="gallery.html"> Shop </a>
     </div>
     <div class="col-2"> 
         <h3> NEWS LETTER </h3>
