--- a/6.html
+++ b/6.html
@@ -66,7 +66,8 @@
     <a href="6.jpeg"> <img src="6.jpeg" class="float-img"> </a>
   <pre style="margin-top: 50px; font-size:x-large; font-family: Arial, Helvetica, sans-serif; text-align: justify; ">
     <b>Sling Bag</b>
- <pre style="color: gray;">   Width:  20cm
+ <pre style="color: gray;">   One piece 
+   Width:  20cm
    Height: 29cm
    Depth:  13cm
    Volume: 4l
@@ -74,7 +75,6 @@
 
 
     <button onclick="window.history.back()" class="return"> return </button>
-
 
 
 
@@ -99,9 +99,9 @@
 <div class="footer">
     <div class="col-1">
         <h3> USEFUL LINKS </h3> 
-        <a href="#"> About </a>
-        <a href="#"> Contact </a>
-        <a href="#"> Shop </a>
+        <a href="about.html"> About </a>
+            <a href="contact.html"> Contact </a>
+            <a href="gallery.html"> Shop </a>
     </div>
     <div class="col-2"> 
         <h3> NEWS LETTER </h3>
