--- a/7.html
+++ b/7.html
@@ -66,7 +66,7 @@
     <a href="7.jpg"> <img src="7.jpg" class="float-img"> </a>
   <pre style="margin-top: 50px; font-size:x-large; font-family: Arial, Helvetica, sans-serif; text-align: justify; ">
     <b>Coin Purse</b>
- <pre style="color: gray;">   Moss Green
+ <pre style="color: gray;">   One piece (Moss Green)
    Height: 18cm
    Width:  10cm
     
@@ -99,9 +99,9 @@
 <div class="footer">
     <div class="col-1">
         <h3> USEFUL LINKS </h3> 
-        <a href="#"> About </a>
-        <a href="#"> Contact </a>
-        <a href="#"> Shop </a>
+        <a href="about.html"> About </a>
+            <a href="contact.html"> Contact </a>
+            <a href="gallery.html"> Shop </a>
     </div>
     <div class="col-2"> 
         <h3> NEWS LETTER </h3>
