modified:   buy.html 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <!-------------------NAVIGATION-------------------->
 <div class="container">
-    <div class="logo"> <a href="index.html"> <img class="img-fluid" src="k1.png" style = "height:50; width: 50px;"> </a> 
+    <div class="logo"> <img class="img-fluid" src="k1.png" style = "height:50; width: 50px;"> </a> 
     </div>
     </div>
 <nav>
